--- a/css/extentd_media.css
+++ b/css/extentd_media.css
@@ -89,8 +89,11 @@ zoom: 1; /* IE6/7 magic */
      	display: none;
  min-height: 0;
      }
-     #test-swipe-1>div>h2,#test-swipe-2>div>h2{
+     #test-swipe-2>div>h2{
      	width:  100%;
+     	 }
+     	 #test-swipe-1>div>h2{
+     	width:  80%;
      	 }
 
 
@@ -112,6 +115,10 @@ zoom: 1; /* IE6/7 magic */
      	/*background-color: red !important;*/
      }
      #test-swipe-1>div>h2,#test-swipe-2>div>h2{
-     	width:  90%;
+     	width:  80%;
      	 
  }
+
+
+
+}
