--- a/css/dashboard_main.css
+++ b/css/dashboard_main.css
@@ -17,7 +17,7 @@ background-size: cover no-repeat;
   text-align: center;
 }
 .main{
-  background-color: red;
+  background-color: blue;
  height: 100%;
  min-height: calc(100vh - 80px);
 
