--- a/css/dashboard_main.css
+++ b/css/dashboard_main.css
@@ -9,24 +9,160 @@ background-size: cover no-repeat;
    font-weight: bold;
 }
 .main_text_bottom{
-    text-align: right;
-      font-size: 52px;
+  text-align: center;
+      text-align: -webkit-center;
+      font-size: 45px;
       font-weight: bold;
 }
 .main_text_bottom2{
   text-align: center;
 }
 .main{
-  background-color: blue;
+ 
  height: 100%;
- min-height: calc(100vh - 80px);
+ min-height: calc(100vh - 0px);
 
 }
 
 .go_down{
-   background-color: green;
+   background-color: white;
 /* height: 100%;*/
 position: absolute;
  bottom:  0px;
 
+     left: -10px;
+         width: 103%!important;
+          /* padding-top: 15px;*/
+          padding: 10px;
+
 }
+.footer_text{
+  color: black;
+  font-weight: bold;
+  color: #2a2a2a;
+  font-size: 28px;
+padding-top: 10px;
+
+
+}
+
+.go_down .col-sm-24.col-md-8{
+  border-right: solid 1px gray;
+}
+
+.wrap_pop_form{
+/*  color: gray;
+  position: absolute;
+  z-index: 0;
+  background-color: red;
+  height: 50px;
+  overflow: auto;
+  top: -150px;*/
+
+  background:white;
+  width:100.5%;
+  color: gray;
+  text-align:left;
+  font-size: 15px;
+  margin: 0;
+  padding: 30px 30px;
+  text-decoration: none;
+  margin-bottom: 50px; 
+  overflow: auto;
+  max-height: calc(100vh - 150px);
+  margin-left: 5px;
+
+}
+
+.wrap_pop_form1{
+
+width: 104%;
+margin-left: -10px;
+}
+
+.wrap_pop_form2{
+
+      margin-left: 5px;
+}
+.lescai{
+  z-index: 1;
+  cursor: pointer;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+.clientsDropDown {
+  position:absolute;
+  bottom:0;
+  width: 100%;
+  padding-bottom:2%;
+
+  z-index: 100;
+
+    left: -5px;
+}
+/*#clientsOpen {
+  background: url("images/open.png") no-repeat scroll 68px 10px #414142;
+  color: #ececec;
+  cursor: pointer;
+  float: left;
+  font-size: 26px;
+  margin: -2px 0 0 10%;
+  padding: 0 15px 2px;
+  text-decoration: none;
+  width: 63px;
+}
+#clientsCTA {
+  background:#414142;
+  width:100%;
+  color: #CCCCCC;
+  text-align:center;
+  font-size: 46px;
+  margin: 0;
+  padding: 30px 0;
+  text-decoration: none;
+}*/
+
+/*#clientsDropDown .clientsClose {
+  background-image: url(images/close.png);
+}*/
+.clientsDropDown .clientsDashboard {
+  display: none;
+}
+
+.logo_foot,.footer_text{
+  text-align: center;
+    text-align: -webkit-center;
+}
+
+
+
+.lescai_mobile{
+  background-color: white;
+  color: gray;
+  padding-top: 1em;
+      margin-top: 1em;
+}
+
+.wrap_pop_form_mobile{
+  padding-top: 6em;
+}
+
+.wrap_pop_form_mobile section{
+  padding-top: 2em;
+}
+
+.wrap_mobile_btn{
+  padding: 2em;
+}
+
+
