--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,11 +4,15 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+/*  padding-top: 50px;*/
+  /*padding-top: 50px;*/
   background-color: #555555;
   color: white;
   font-family:  BenderRegular;
 
+}
+.main{
+      padding-top: 50px;
 }
 .deviz{
     font-family:  BenderBold;
@@ -42,6 +46,22 @@ a {
 /*
  * Sidebar
  */
+#navbar,.navbar-header{
+  background-color: #555555!important;
+  color: white;
+}
+#navbar *,.navbar-header *{
+ 
+  color: white!important;;
+}
+.navbar-form.navbar-right{
+  display: none;
+}
+.navbar-inverse {
+
+    height: 0;
+}
+
 
  .page-footer {
     padding-top: 20px;
@@ -51,6 +71,7 @@ a {
 .sidebar {
   display: none;
     background-color: #555555!important;
+    top: 0!important;
 }
 @media (min-width: 768px) {
   .sidebar {
@@ -342,4 +363,17 @@ button:focus {
   position: relative;
   right:  150px;
   top: 40px;
+}
+
+
+.yellow_btn{
+        color: white;
+    border: 1px solid #d6632c;
+  
+    background-color: #d6632c;
+    /* width: 80%; */
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 26px;
+
 }
