--- a/css/dashboard_tender.css
+++ b/css/dashboard_tender.css
@@ -20,3 +20,19 @@ padding: 0;
 	width: 100%;
 	padding: 1em;
 }
+
+.where{
+    color: white;
+    border: 1px solid #d6632c;
+    /* width: 80%; */
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 26px;
+    text-align: left;
+}
+
+.where:hover,.where:active{
+	text-decoration: none  !important; 
+ color:white !important;
+
+}
